# simd

./: CMakeLists.txt
include/: code.hpp  code64.hpp  hiprec.hpp  polynomial.hpp  simd.hpp
src/: codegen.cpp  test.cpp
